# gitstart-cli

./: .gitignore  BUILD-AND-RELEASE.md  BUILD.md  DEPLOYMENT_READY.md  ENCRYPTED_KEYS.md  GSAI.md  IMMEDIATE-FIX.md  Makefile  PRIVATE-REPO-RELEASE-GUIDE.md  PRODUCTION_READY.md  PUBLIC-INSTALL.md  README.md  RELEASE-FIX-GUIDE.md  RELEASE.md  SOLUTION_COMPLETE.md  SYSTEM-INSTALL-GUIDE.md  build-local.sh  build_executable.py  debug-api-keys.py  debug_crypto_consistency.py  debug_decryption_issue.py  debug_production_env.py  gsai-simple.spec  gsai.spec  install.bat  install.ps1  install.sh  pyproject.toml  pytest.ini  quick-install.sh  standalone-install.sh  test_build_script.py  test_complete_system.py  test_config_import.py  test_crypto_only.py  test_diff_demo.py  test_encryption.py  test_key_availability.py  test_lightweight_keys.py  trigger-release.sh
.github/workflows/: build-release.yml  test-build.yml
docs/: README.md  cli-reference.md  configuration.md  faq.md  installation-linux.md  installation-macos.md  installation-windows.md  installation.md  installer-guide.md  quick-start.md  running-locally.md  troubleshooting.md
gsai/: __init__.py  build_config.py  chat.py  config.py  config.py.bak  crypto_utils.py  display_helpers.py  embedded_keys.py  key_resolver.py  linter.py  main.py  repo_map.py  security.py  special.py  utils.py
gsai/agents/: __init__.py  code_writing.py  git_operations.py  implementation_planning.py  master.py  models.py  question_answering.py  research.py  ticket_writing.py
gsai/agents/prompts/: helpers.py
gsai/agents/prompts/templates/: coding_instructions.jinja  expert_system.jinja  implementation_plan_system.jinja  (+8 more)
gsai/agents/tools/: __init__.py  delete_file.py  deps.py  git_tools.py  lint_source_code.py  list_files.py  move_file.py  overwrite_file.py  quick_view_file.py  run_command.py  save_to_memory.py  search_for_code.py  search_for_files.py  sequential_thinking.py  str_replace.py  view_file.py
gsai/agents/tools_agentic/: expert.py  extract_relevant_context_from_url.py  web_navigation.py  web_search.py
scripts/: build_with_keys.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_cli.py  test_commands.py  test_delete_file.py  test_display.py  test_repo_map_cache.py  test_repo_map_errors.py  test_repo_map_integration.py  test_repo_map_ranking.py  test_repo_map_rendering.py  test_repo_map_tags.py  test_utils.py
